<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qingsong.aroundu.Main2Activity">

    <TextView
        android:id="@+id/helloWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hxdglmje"
        android:textColor="@color/color"
        android:textSize="30sp"
        android:textAlignment="gravity" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calling"
            android:textSize="20sp"
            android:text="@string/calling"
            android:layout_marginBottom="25dp"
            android:background="@android:color/holo_orange_light"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/browser"
            android:layout_marginStart="100dp"
            android:textSize="20sp"
            android:layout_marginBottom="25dp"
            android:text="@string/browser"
            android:background="@android:color/holo_purple"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quit"
            android:layout_marginStart="200dp"
            android:textSize="20sp"
            android:layout_marginBottom="25dp"
            android:text="@string/quit"
            android:background="@android:color/darker_gray"/>
    </RelativeLayout>
</RelativeLayout>
